# Numerics

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Numerical Math.sln  Numerical Math.vcxproj  Numerical Math.vcxproj.filters  Numerics  README.md  TODO.txt
app/: examples.cpp  main.cpp
include/: Differentiation.hpp  Function.hpp  Integration.hpp  Numerics.hpp  RootFinding.hpp
include/Numerics/Algebra/: Matrix.hpp
include/Numerics/Calculus/: Differentiation.hpp  Integration.hpp  RootFinding.hpp
include/Numerics/Core/: Function.hpp  Utils.hpp
include/dependencies/: my_dynamic_array.hpp  my_map.hpp
src/Calculus/: Differentiation.cpp  Integration.cpp  RootFinding.cpp
